# perditio-devkit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: on-test-failure.yml  test.yml
perditio/: __init__.py  badges.py  files.py  github.py  readme.py  report.py
tests/: test_badges.py  test_files.py  test_github.py  test_report.py
